--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <span class="hashtag"></span>
                     </div>
                     <div class="tweet-text">
-                        <p></p>
+                        <p>Aucune actu</p>
                     </div>
                     <div class="tweet-pic">
                         <img src="" alt="">
