--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                         <span class="hashtag"></span>
                     </div>
                     <div class="tweet-text">
-                        <p>Aucune actu</p>
+                        <p>Cyril Hanouna : ce qu'il faut retenir du Complément d'enquête sur le "parrain du PAF", roi de TPMP</p>
                     </div>
                     <div class="tweet-pic">
-                        <img src="" alt="">
+                        <img src="https://static.actu.fr/uploads/2023/11/cyril-hanouna-960x640.jpg" alt="">
                         </a>
                     </div>
                 </div>
