--- a/index.html
+++ b/index.html
@@ -89,6 +89,41 @@
         </div>
     </div>
 
+            <div class="tweet">
+                <div class="tweet-profile-pic">
+                    <img src="https://cdn.discordapp.com/attachments/1146787172607869103/1176679145489584179/image.png?ex=656fbed9&is=655d49d9&hm=3ea8f8a05f3d3cde6b71f11db297a95353aee9050eaae2a2facbcd8df934eb0d&" alt="Profile Picture">
+                </div>
+                <div class="tweet-content">
+                    <div class="tweeter-info">
+                        <span class="name">NightMoon</span>
+                        <img src="" alt="">
+                        <span class="hashtag"></span>
+                    </div>
+                    <div class="tweet-text">
+                        <p>« Place de la potiche » et climat de « terreur » sur Touche pas à mon poste
+
+Cyril Hanouna, c’est plus de trois heures d’émission quotidienne pour C8 du lundi au vendredi : PAF avec Baba, Touche pas à mon poste : partie 1, Touche pas à mon poste : partie 2 et Touche pas à mon poste, la grand-messe à partir de 20h10.
+
+Virginie Vilar a rencontré 32 collaborateurs de l’émission dont 15 lui auraient raconté l’ambiance « de terreur » qui y régnerait. Grâce au témoignage d’un salarié, dont les paroles sont lues pour garantir son anonymat, on en apprend plus sur la fabrication de la quotidienne de Touche pas à mon poste.
+
+Durant un peu plus d’une heure d’émission, Virginie Vilar, qui a indiqué avoir effectué à cette occasion « l’enquête la plus compliquée de toute [ma] carrière », a décortiqué la carrière, le système, les revenus, les protections ou encore les inimitiés de Cyril Hanouna. Mais elle n’a pu obtenir un entretien directement avec Cyril Hanouna, à l’exception de quelques mors arrachés à la volée à la sortie de la maison de Radio France. 
+
+Seule Valérie Benaïm, chroniqueuse et proche d’Hanouna, a accepté de répondre aux questions, face caméra. Si cette dernière a présenté un homme « capable de tout pour amuser ses amis », ayant construit « une émission qui lui ressemble » avec une « ambiance de famille », les autres chroniqueurs n’ont pas répondu au magazine d’investigation.
+
+« Cyril Hanouna c’est un fléau, un manipulateur »
+
+« Cyril Hanouna c’est un fléau, un manipulateur (…) Il donne la parole à des gens qui ne devraient pas l’avoir (…) Il invite n’importe qui (…) C’est un lâche mégalomane à qui on a donné trop de pouvoir (…) Ces chroniqueurs ne sont pas libres dans leurs discours (…) Lui ne me fait pas peur, mais tout son groupe, son organisation, sont capables de coups fourrés. ». Là, ce sont les mots, durs, du  rappeur Booba, interrogé dans le cadre de cette enquête. 
+
+On apprend dans l’émission que les chroniqueurs préférés seraient toujours placés au pupitre de droite. Et au plus près du « parrain », se trouverait le copilote.</p>
+                    </div>
+                    <div class="tweet-pic">
+                        <img src="" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
   
 
                    
