--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <a href="https://discord.gg/nwhJM7bYK8">
                 <img src="./img/discord-search.svg" alt="Search">
             </a>
-            <a href="index.html">
+            <a href="https://nightmoonn.github.io/actu/">
                 <img src="./img/reloadd.svg" alt="Reload">
             </a>
             <a href="./login/index.html">
