--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <p>Cyril Hanouna : ce qu'il faut retenir du Complément d'enquête sur le "parrain du PAF", roi de TPMP</p>
                     </div>
                     <div class="tweet-pic">
-                        <img src="https://static.actu.fr/uploads/2023/11/cyril-hanouna-960x640.jpg" alt="">
+                        <img src="https://linforme-focus.sirius.press/2023/11/30/0/0/4496/3000/1920/1280/75/0/63e076f_1701343841455-afp-com-20221117-partners-080-hl-rdoucelin-1895085-highres.jpg" alt="">
                         </a>
                     </div>
                 </div>
